fix(): product caption spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -66,6 +66,10 @@
 	width: 96px;
 }
 
+#pricing h3 {
+	line-height: 1.8em;
+}
+
 #pricing h3 img {
 	display: inline;
 	margin-bottom: -10px;
